--- a/src/app/battle-field/message-panel/message-panel.component.html
+++ b/src/app/battle-field/message-panel/message-panel.component.html
@@ -1,1 +1,5 @@
-<p>message-panel works!</p>
+<div class="container">
+  <ul class="message-container">
+    <li *ngFor="let message of messages">{{ message }}</li>
+  </ul>
+</div>
