--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,8 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0px;
 }
+
+div.main-container {
+  background-color: black;
+  height: 100vh;
+}
