--- a/src/app/select/grid/grid.component.scss
+++ b/src/app/select/grid/grid.component.scss
@@ -1,11 +1,11 @@
 div.container {
   margin: 10px;
-  overflow-y: scroll;
-  max-height: 100%;
+  height: 100%;
 }
 
 div.grid {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  overflow-y: scroll;
 }
