--- a/src/app/select/select.component.scss
+++ b/src/app/select/select.component.scss
@@ -1,14 +1,16 @@
 div.container {
-  display: grid;
-  grid-template-rows: auto auto 1fr;
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("src/assets/images/stadium.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   box-sizing: content-box;
+  height: 100%;
 }
 
 div.title {
   text-align: center;
+  padding: 20px;
 
   h1 {
     display: inline;
@@ -19,6 +21,7 @@ div.title {
     color: white;
     margin: 10px;
     padding: 10px;
+    box-sizing: border-box;
   }
 }
 
