--- a/src/app/battle-field/pokemon-panel/pokemon-panel.component.html
+++ b/src/app/battle-field/pokemon-panel/pokemon-panel.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <img
-    [src]="pokemon.sprites.front_default"
+    [src]="pokemon?.sprites.front_default"
     alt="front_default"
     [class.reverted]="reverted"
   >
   <div class="status">
-    <p>{{ pokemon.name }}</p>
+    <p>{{ pokemon?.name }}</p>
   </div>
 </div>
