--- a/src/app/select/grid/pokemon/pokemon.component.html
+++ b/src/app/select/grid/pokemon/pokemon.component.html
@@ -1,6 +1,8 @@
-<div class="container"
-(click)="selectPokemon()"
-[class.selected]="pokemon && selectedPokemon == pokemon.id">
-    <img [src]="pokemon?.sprites?.front_default" alt="front_default">
+<div
+  class="container"
+  (click)="selectPokemon()"
+  [class.selected]="pokemon && selectedPokemon == pokemon.id"
+>
+  <img [src]="pokemon?.sprites.front_default" alt="front_default">
   <p class="name">{{ pokemon?.name }}</p>
 </div>
