--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="validation">
     <div class="fighter">
-      <img *ngIf="pokemon1" [src]="pokemon1.sprites.front_default" alt="">
+      <img *ngIf="pokemon1" [src]="pokemon1.sprites?.front_default" alt="">
     </div>
     <div class="separator">
       <img src="./assets/images/vs_logo.png" alt="">
