Add logs messages to battle

--- a/src/app/battle-field/battle-field.component.html
+++ b/src/app/battle-field/battle-field.component.html
@@ -11,7 +11,7 @@
       ></app-pokemon-panel>
     </div>
     <app-message-panel
-      [messages]="messages"
+      [messages]="battle?.messages"
     ></app-message-panel>
   </div>
 </div>
