Correction des affichages de select, et ajout de l'affichage de battle-field

--- a/src/app/battle-field/battle-field.component.html
+++ b/src/app/battle-field/battle-field.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <button [routerLink]="['/select']"><- Retour</button>
   <div class="grid">
     <div class="field">
       <app-pokemon-panel
