--- a/src/app/battle-field/battle-field.component.scss
+++ b/src/app/battle-field/battle-field.component.scss
@@ -6,6 +6,23 @@ div.container {
   text-align: center;
 }
 
+button {
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 1px solid #F0F0F0;
+  color: #F0F0F0;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+
 div.grid {
   display: grid;
   grid-template-rows: 53% 47%;
