--- a/src/app/battle-field/message-panel/message-panel.component.scss
+++ b/src/app/battle-field/message-panel/message-panel.component.scss
@@ -1,16 +1,26 @@
 div.container {
   background-color: rgba(0, 0, 0, 0.5);
-  height: 100%;
-  box-sizing: border-box;
   border-top: 1px solid #F0F0F0;
+  height: 100%;
+  overflow-y: scroll;
+  box-sizing: border-box;
 }
 
-ul.message-container {
+table.message-container {
   text-align: left;
   margin: 10px 35%;
-  list-style: none;
+  border-spacing: 10px 15px;
 
-  li {
+  tr {
     color: white;
+
+    td.name {
+      color: #CACACA;
+      text-transform: capitalize;
+    }
+
+    td.message {
+      font-size: 20px;
+    }
   }
 }
