--- a/src/app/select/grid/grid.component.scss
+++ b/src/app/select/grid/grid.component.scss
@@ -1,11 +1,12 @@
 div.container {
-  margin: 10px;
   height: 100%;
+  overflow-y: scroll;
+  box-sizing: border-box;
 }
 
 div.grid {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(6, 1fr);
-  overflow-y: scroll;
+  grid-template-columns: repeat(7, 1fr);
+  grid-auto-columns: 1fr;
 }
