--- a/src/app/select/grid/pokemon/pokemon.component.scss
+++ b/src/app/select/grid/pokemon/pokemon.component.scss
@@ -41,6 +41,7 @@ div.container {
     padding: 10px;
     margin: 0px;
     color: white;
+    font-size: 12px;
     text-align: center;
     text-transform: capitalize;
   }
