--- a/src/app/select/select.component.scss
+++ b/src/app/select/select.component.scss
@@ -1,10 +1,9 @@
 div.container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 15% 25% 60%;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("src/assets/images/stadium.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  box-sizing: content-box;
   height: 100%;
 }
 
@@ -72,4 +71,6 @@ div.grid {
   display: grid;
   grid-gap: 120px;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100%;
+  padding: 10px;
 }
