Modifs affichage select

--- a/src/app/select/grid/pokemon/pokemon.component.scss
+++ b/src/app/select/grid/pokemon/pokemon.component.scss
@@ -18,8 +18,7 @@ div.container {
     }
 
     p.name {
-      background-color: #F0F0F0;
-      color: black;
+      color: white;
     }
   }
 
@@ -40,7 +39,7 @@ div.container {
   p.name {
     padding: 10px;
     margin: 0px;
-    color: white;
+    color: #CACACA;
     font-size: 12px;
     text-align: center;
     text-transform: capitalize;
