--- a/src/app/battle-field/pokemon-panel/pokemon-panel.component.html
+++ b/src/app/battle-field/pokemon-panel/pokemon-panel.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <img
-    [src]="pokemon?.sprites.front_default"
+    [src]="pokemonGif(pokemon?.id)"
     alt="front_default"
     [class.reverted]="reverted"
   >
