--- a/src/app/battle-field/message-panel/message-panel.component.scss
+++ b/src/app/battle-field/message-panel/message-panel.component.scss
@@ -24,3 +24,10 @@ table.message-container {
     }
   }
 }
+
+span.dateDisplay {
+  font-size: 20px;
+  text-align: left;
+  border-spacing: 10px 15px;
+  color: gold;
+}
