--- a/src/app/battle-field/battle-field.component.scss
+++ b/src/app/battle-field/battle-field.component.scss
@@ -14,10 +14,9 @@ button {
   padding: 10px;
   font-size: 20px;
   cursor: pointer;
-  position: absolute;
+  position: relative;
   top: 10px;
   left: 10px;
-
   &:hover {
     background-color: rgba(0, 0, 0, 0.7);
   }
