--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="title">
-    <h1>Sélectionnez vos combatants</h1>
+    <h1>Sélectionnez vos combattants</h1>
   </div>
   <div class="validation">
     <div class="fighter">
