--- a/src/app/select/grid/grid.component.scss
+++ b/src/app/select/grid/grid.component.scss
@@ -1,12 +1,16 @@
 div.container {
   height: 100%;
-  overflow-y: scroll;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  row-gap: 10px;
   box-sizing: border-box;
-  border-radius: 5px;
 }
 
 div.grid {
+  height: 100%;
   display: grid;
+  overflow-y: scroll;
+  border-radius: 5px;
   grid-gap: 10px;
   grid-template-columns: repeat(7, 1fr);
   grid-auto-columns: 1fr;
