Correction du prof sur les appels API

--- a/src/app/battle-field/battle-field.component.html
+++ b/src/app/battle-field/battle-field.component.html
@@ -1,8 +1,10 @@
 <div class="container">
-  <button [routerLink]="['/select']"><- Retour</button>
-  <button  (click)="startBattle()"> Start Battle</button>
-  <button  (click)="stopBattle()"> Stop Battle</button>
   <div class="grid">
+    <div>
+      <button [routerLink]="['/select']"><- Retour</button>
+      <button  (click)="startBattle()"> Start Battle</button>
+      <button  (click)="stopBattle()"> Stop Battle</button>
+    </div>
     <div class="field">
       <app-pokemon-panel
         [pokemon]="pokemon1"
