Ajout mort pokémon

--- a/src/app/battle-field/pokemon-panel/pokemon-panel.component.html
+++ b/src/app/battle-field/pokemon-panel/pokemon-panel.component.html
@@ -3,6 +3,7 @@
     [src]="pokemonGif(pokemon?.id)"
     alt="front_default"
     [class.reverted]="reverted"
+    [class.dead]="pokemon?.life <= 0"
   >
   <div class="status">
     <p>{{ pokemon?.name }}</p>
