--- a/src/app/battle-field/pokemon-panel/pokemon-panel.component.scss
+++ b/src/app/battle-field/pokemon-panel/pokemon-panel.component.scss
@@ -10,6 +10,10 @@ div.container {
     &.reverted {
       transform: scaleX(-1);
     }
+
+    &.dead {
+      filter: brightness(0%);
+    }
   }
 
   div.status {
