Ajout de status de mort

--- a/src/app/battle-field/message-panel/message-panel.component.html
+++ b/src/app/battle-field/message-panel/message-panel.component.html
@@ -1,6 +1,6 @@
 <div class="container">
+  <p class="dateDisplay">{{date | date: 'medium'}}</p>
   <table class="message-container">
-    <span class="dateDisplay">{{date | date: 'medium'}}</span>
     <tr *ngFor="let message of messages">
       <td [appMessageColor]= message.color  >{{ message.pokemon.name }}</td>
       <td [appMessageColor]= message.color >{{ message.message }}</td>
