--- a/src/app/battle-field/message-panel/message-panel.component.scss
+++ b/src/app/battle-field/message-panel/message-panel.component.scss
@@ -25,9 +25,10 @@ table.message-container {
   }
 }
 
-span.dateDisplay {
+p.dateDisplay {
   font-size: 20px;
   text-align: left;
   border-spacing: 10px 15px;
   color: gold;
+  text-align: center;
 }
